[project]
name = "remove-pii"
version = "0.1.0"
description = "Remove PII from provided pdf"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ocrmypdf>=16.11.1",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "pymupdf>=1.26.5",
    "reportlab>=4.4.4",
    "spacy>=3.8.7",
]
